# RAG

./: .dockerignore  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  proxy.ts  readmefile.d  render.yaml  vitest.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: celery_app.py  chat_history.py  db_models.py  ingestion_tasks.py  main.py  rag.py  rag_ingestion.py  rag_llm.py  rag_retrieval.py  rag_settings.py
backend/app/api/: api_router.py
backend/app/api/routes/: chat_routes.py  rag_routes.py
backend/app/api/v1/: __init__.py  chat.py  health.py  ingest.py
backend/app/core/: auth.py  config.py  dependencies.py  errors.py  logging.py  rate_limit.py
backend/app/database/: connection.py
backend/app/db/: mongodb.py
backend/app/domain/: __init__.py  exceptions.py  models.py
backend/app/infrastructure/: __init__.py  document_loader.py  document_splitter.py  embeddings.py  llm.py  mongo.py  mongo_models.py  reranker.py  storage.py
backend/app/ingestion/: embedder.py  loader.py  splitter.py
backend/app/rag/: generator.py  pipeline.py  retriever.py
backend/app/repositories/: __init__.py  chat_history_repository.py  chat_repository.py  documents_repository.py  rag_chunk_repository.py  vector_repository.py
backend/app/routes/: __init__.py  ingest_routes.py  rag_routes.py  routes.py  schemas.py
backend/app/schemas/: __init__.py  rag.py
backend/app/schemas/responses/: health.py  (+1 more)
backend/app/services/: __init__.py  chat_history_service.py  chat_service.py  ingestion_service.py  rag_service.py
backend/app/workers/: rq_worker.py
backend/uploads/: 19ca0f13a53a1259.txt  b68b3f87acb13c37.txt
backend/vector_db/: chat_history.sqlite3  chroma.sqlite3
(+99 files in other folders)
