[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI backend service for RAG project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.0.0",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.30.0",
    "unstructured[pdf]>=0.22.22",
    "langchain-text-splitters>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
