[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI backend service for RAG project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "langchain-openai>=0.3.35",
    "langchain-huggingface>=0.3.1",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "uvicorn[standard]>=0.30.0",
    "unstructured[docx,pdf]>=0.22.22",
    "langchain-text-splitters>=1.1.2",
    "beanie>=2.1.0",
    "motor>=3.7.1",
    "redis>=6.0.0",
    "rq>=2.2.0",
    "pyjwt[crypto]>=2.10.1",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.41.0,<5.0.0",
    "slowapi>=0.1.9",
    "langgraph>=1.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
